--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="grid">
         <div class="grid-item grid-item-main">
-            <h1>Amazing Dude. Amazing Life.</h1>
-            <p>Welcome to the personal site of John Doe. A professional skier and a musician.</p>
+            <h1>Amazing Dude. <br> Amazing Life.</h1>
+            <p>Welcome to the personal site of John Doe. <br> A professional skier and a musician.</p>
         </div>
         <div class="grid-item grid-item-red"></div>
         <div class="grid-item grid-item-lgray">
